--- a/public/profileInfo.css
+++ b/public/profileInfo.css
@@ -1,5 +1,10 @@
 * { box-sizing: border-box; }
-html, body { margin: 0; padding: 0; height: 100%; }
+html, body { 
+    margin: 0; 
+    padding: 0;
+     height: 100%;
+   
+    }
 .btn {
   display: inline-block;
   padding: 0 5px;
@@ -20,9 +25,14 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   padding: 10px;
   border: 1px solid silver;
 }
-.container { width: 100%; height: 100%; }
+.container { 
+    display:flex;
+    flex-direction: column;
+    width: 800px;
+    height: 100%; 
+}
 @media screen and (min-width: 800px) {
-  .container { width: 600px; margin: 0 auto; }
+  .container { width: 800px; margin: 0 auto; }
 }
 .input-group { margin-bottom: 15px; }
 .input-group label { width: 25%; display: inline-block; }
@@ -30,7 +40,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 .join-notice { width:100%; 
   background-color:red; 
   margin-bottom:10px;
-   margin-left:20px;
+  margin-left:20px;
   display:flex;
   justify-content: center;
   
@@ -38,6 +48,29 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   table,td{
     border: 1px solid #333;
     width:450PX;
+  }
+  .profileInfo{
+      width:600px;
+      height:130px;
+      display:flex;
+      background-color: yellow;
+      flex-direction: column;
+      justify-content: space-between;
+  }
+  
+  .profileFollowFollowing{
+      width:300px;
+      height:60px;
+      background-color:blue;
+      margin-left:20px;     
+      position:relative; 
+  }
+  .profileFollowing-container{
+    width:600px;
+    display:flex;
+    position:absolute;
+    right:0;
+    bottom:0;
   }
 .half { float: left; width: 50%; margin: 10px 0; }
 #join { float: right; }
@@ -54,11 +87,27 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   text-align: left;
   padding: 10px;
   margin-right: 10px;
+  width:800px;
+  height:150px;
   border-radius: 4px;
   border: 1px solid silver;
   background: lightcoral;
+  display:flex;
+
 }
-.user-name { font-weight: bold; font-size: 18px; }
+.profilePic{
+    width:150px;
+    height:100%;
+    background-color:red;
+}
+.user-name-container{ 
+    width:550px;
+    margin-left:15px;
+    background-color: orange;
+    display:flex;
+    justify-content: space-between;
+}
+.user-name { font-weight: bold; font-size: 28px; }
 .count { font-weight: bold; color: crimson; font-size: 18px; }
 .timeline {
   margin-top: 10px;
