--- a/views/join.html
+++ b/views/join.html
@@ -1,21 +1,34 @@
-{% extends 'layout.html' %}
-
 {% block content %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>{{title}}</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="/join.css">
+  </head>
+<body>
   <div class="timeline">
-    <form id="join-form" action="/auth/join" method="post">
-      <div class="input-group">
-        <label for="join-email">이메일</label>
-        <input id="join-email" type="email" name="email"></div>
-      <div class="input-group">
-        <label for="join-nick">닉네임</label>
-        <input id="join-nick" type="text" name="nick"></div>
-      <div class="input-group">
-        <label for="join-password">비밀번호</label>
-        <input id="join-password" type="password" name="password">
-      </div>
-      <button id="join-btn" type="submit" class="btn">회원가입</button>
-    </form>
-  </div>
+    <div class="joinContainer">
+          <div class="joinTitle"><p class="joinTItleP">회원가입</p></div>     
+          <div class="join-form-container">
+        `  <form id="join-form" action="/auth/join" method="post">
+            <div class="input-group">     
+              <input id="join-id" type="text" placeholder="아이디" name="id"></div>
+            <div class="input-group">
+              <input id="join-email" type="email" placeholder="이메일" name="email"></div>
+            <div class="input-group">
+              <input id="join-nick" type="text" placeholder="닉네임" name="nick"></div>
+            <div class="input-group">
+              <input id="join-password" type="password" placeholder="비밀번호" name="password">
+            </div>
+            <div class="input-group"><button id="join-btn" type="submit" class="btn">가입하기</button></div>
+      </form>
+    </div>
+          </div>   
+    </div>
+</body>
 {% endblock %}
 
 {% block script %}
@@ -26,4 +39,5 @@
       }
     };
   </script>
+  </html>
 {% endblock %}
