--- a/public/join.css
+++ b/public/join.css
@@ -20,15 +20,16 @@ input{
 }
 input[type='text'], input[type='email'], input[type='password'], textarea {
     border-radius: 10px;
-    height: 20px;
+    height: 35px;
     width:80%;
     padding: 10px;
     border: 1px solid silver;
-    margin-bottom:10px;
+    margin-bottom:5px;
     
   }
   .input-group{
       width:350px;
+     
      display:flex;
      justify-content: center;
     }
@@ -37,7 +38,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   }
 .joinContainer{
     width:400px;
-    height:350px;
+    height:400px;
     border:1px solid black;
     
     display:flex;
@@ -54,7 +55,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
     align-items: center;
 }
 .joinTitle{
-    border:1px solid black;
+    border-bottom:1px solid black;
     width:100%;
     height:50px;
     display:flex;
@@ -70,7 +71,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 }
 #join-btn{
     margin-top:5px;
-    width:320px;
+    width:85%;
 }
 .btn{
     display: inline-block;
@@ -93,4 +94,8 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 }
 .joinButtonContainer{
     
+}
+.join-input{
+    height:140px;
+
 }
