--- a/public/profileInfo.css
+++ b/public/profileInfo.css
@@ -53,24 +53,40 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
       width:600px;
       height:130px;
       display:flex;
-      background-color: yellow;
+      /* background-color: yellow; */
       flex-direction: column;
       justify-content: space-between;
-  }
+      position:relative; 
+    }
   
   .profileFollowFollowing{
-      width:300px;
-      height:60px;
-      background-color:blue;
-      margin-left:20px;     
-      position:relative; 
-  }
+      width:500px;
+      height:45px;
+      /* background-color:blue; */
+      margin-left:20px;  
+      position:absolute;
+      right:0px;
+      bottom:0;
+    }
   .profileFollowing-container{
-    width:600px;
+    width:500px;
     display:flex;
-    position:absolute;
-    right:0;
-    bottom:0;
+    justify-content: flex-end;
+   
+  }
+  .profileFollowing , .profileFollower{
+    display:flex;
+    width:130px;
+  }
+  .following-count {
+    margin-left:20px;
+    width:40px;
+    /* background-color:red; */
+  }
+  .follower-count{
+    margin-left:20px;
+    width:40px;
+    /* background-color:red; */
   }
 .half { float: left; width: 50%; margin: 10px 0; }
 #join { float: right; }
@@ -103,7 +119,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 .user-name-container{ 
     width:550px;
     margin-left:15px;
-    background-color: orange;
+    /* background-color: orange; */
     display:flex;
     justify-content: space-between;
 }
