--- a/views/profileInfo.html
+++ b/views/profileInfo.html
@@ -25,11 +25,11 @@
             </div>
           <div class="profileFollowFollowing">
             <div class="profileFollowing-container">     
-            <div class="half">
+            <div class="profileFollowing">
               <div>팔로잉</div>
               <div class="count following-count">{{followingCount}}</div>
             </div>
-            <div class="half">
+            <div class="profileFollower">
               <div>팔로워</div>
               <div class="count follower-count">{{followerCount}}</div>
             </div>
