--- a/views/main.html
+++ b/views/main.html
@@ -38,6 +38,48 @@
     <div class="twit-author"><a href="post">test1</a></div>
     <div class="twit-content">테스트 문서 </div>
   </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
+  <div class="twit">
+    <input type="hidden" value="작성자" class="twit-user-id">
+    <input type="hidden" value="작성자아이디" class="twit-id">
+    <div class="twit-author"><a href="post">test1</a></div>
+    <div class="twit-content">테스트 문서 </div>
+  </div>
 </div>
 {% endblock %}
 
