--- a/views/insert.html
+++ b/views/insert.html
@@ -17,15 +17,21 @@
             <label for="content">설명</label><br>
             <input id="content" type="type" name="content" placeholder="설명 입력"><br>
           </div>
-          <div class="input-group">
-            <button id="" class="">사진첨부</button>
-          </div>
+          <div class="input-group">  
+            <div class="box">
+              <div class="profile-img"><img id="post-img" src="static/profile.jpg" style="width:200%; height:auto;"></div>
+            </div>
+            <label id="postImg-label" for="postImg">사진 업로드</label>
+            <input id="postImg" type="file" accept="image/*">
+        </div>
+
           <div class="input-group">
             <label>태그</label>
             <a>Q&A</a>&nbsp;<a>JAVA</a>&nbsp;<a>C++</a>&nbsp;<a>Nodejs</a>&nbsp;<a>DB</a>
           </div>
           <div class="input-group">
-            <button id="" class="">등록</button>
+              <button id="twit-btn" type="submit" class="btn">짹짹</button>
+          
           </div>
         </form>
       </div>
@@ -69,5 +75,18 @@
         }
       });
     });
+    document.getElementById("postImg").addEventListener("change", e => {
+    const input = e.target;
+    if(input.files && input.files[0]) {
+      const reader = new FileReader();
+      reader.onload = e => {
+          const previewImage = document.getElementById("post-img")
+          previewImage.src = e.target.result
+      }
+      // reader가 이미지 읽도록 하기
+      reader.readAsDataURL(input.files[0]);
+    }
+  });
+
   </script>
 {% endblock %}
