--- a/views/profileInfo.html
+++ b/views/profileInfo.html
@@ -11,9 +11,10 @@
     <div class="container">
       <div class="profile-wrap">
         
-        <div class="profile">
-        <div class="profilePic"></div>
+        <div class="profileInfoContainer">
+        
           {% if user and user.id %}
+          <div class="profilePic"></div>
           <div class="profileInfo">
             <div class="user-name-container">
               <div class="user-name">{{user.nick}}</div>
