--- a/public/join.css
+++ b/public/join.css
@@ -1,7 +1,7 @@
-.timeline{
+ .timelineContainer{
     width:400px;
     height:300px;
-    display:flex;
+    /* display:flex; */
    justify-content: center;
     
 }
@@ -37,8 +37,8 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
       
   }
 .joinContainer{
-    width:400px;
-    height:400px;
+    /* width:400px;
+    height:400px; */
     border:1px solid black;
     
     display:flex;
@@ -48,7 +48,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 }
 .join-form-container{
     width:100%;
-    height:450px;
+    /* height:450px; */
     display:flex;
     flex-direction: column;
     justify-content: center;
