--- a/views/join.html
+++ b/views/join.html
@@ -1,45 +1,60 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/join.css">
-  </head>
-<body>
-  <div class="timeline">
-    <div class="joinContainer">
-          <div class="joinTitle"><p class="joinTItleP">회원가입</p></div>     
-          <div class="join-form-container">
-        `  <form id="join-form" action="/auth/join" method="post">
-            <div class="input-group">     
-              <input id="join-id" class="join-input" type="text" placeholder="아이디" name="id"></div>
-            <div class="input-group">
-              <input id="join-email" class="join-input" type="email" placeholder="이메일" name="email"></div>
-            <div class="input-group">
-              <input id="join-nick" class="join-input" type="text" placeholder="닉네임" name="nick"></div>
-            <div class="input-group">
-              <input id="join-password" class="join-input" type="password" placeholder="비밀번호" name="password">
-            </div>
-            <div class="input-group"><button id="join-btn" type="submit" class="btn">가입하기</button></div>
-      </form>
-    </div>
-          </div>   
-    </div>
-</body>
+<head>
+  <link rel="stylesheet" href="/join.css">
+</head>
+<div class="timeline">
+<div class="timelineContainer">
+  <div class="joinContainer">
+        <div class="joinTitle"><p class="joinTItleP">회원가입</p></div>     
+        <div class="join-form-container">
+        <form id="join-form" action="/auth/join" method="post">
+          프로필
+          <div class="input-group">  
+              <div class="box">
+                <div class="profile-img"><img id="main-img" src="static/profile.jpg" style="width:200%; height:auto;"></div>
+              </div>
+              <label id="img-label" for="img" class>사진 업로드</label>
+              <input id="img" type="file" accept="image/*">
+          </div>
+          <div class="input-group">     
+            <input id="join-id" class="join-input" type="text" placeholder="아이디" name="id"></div>
+          <div class="input-group">
+            <input id="join-email" class="join-input" type="email" placeholder="이메일" name="email"></div>
+          <div class="input-group">
+            <input id="join-nick" class="join-input" type="text" placeholder="닉네임" name="nick"></div>
+          <div class="input-group">
+            <input id="join-password" class="join-input" type="password" placeholder="비밀번호" name="password">
+          </div>
+          <div class="input-group"><button id="join-btn" type="submit" class="btn">가입하기</button></div>
+    </form>
+  </div>
+        </div>   
+</div>
+</div>
 {% endblock %}
 
 {% block script %}
-  <script>
-    window.onload = () => {
-      if (new URL(location.href).searchParams.get('error')) {
-        alert('이미 존재하는 이메일입니다.');
+<script>
+  window.onload = () => {
+    if (new URL(location.href).searchParams.get('error')) {
+      alert('이미 존재하는 이메일입니다.');
+    }
+  };
+
+  document.getElementById("img").addEventListener("change", e => {
+    const input = e.target;
+    if(input.files && input.files[0]) {
+      const reader = new FileReader()
+      reader.onload = e => {
+          const previewImage = document.getElementById("main-img")
+          previewImage.src = e.target.result
       }
-    };
-  </script>
-  </html>
+      // reader가 이미지 읽도록 하기
+      reader.readAsDataURL(input.files[0]);
+    }
+  });
+</script>
+</html>
 {% endblock %}
