--- a/views/layout.html
+++ b/views/layout.html
@@ -24,7 +24,7 @@
            {% endif %}</div>
          
           <br>
-          <div class="menuContainer"><a href="">Q&A</a></div><br>
+          <div class="menuContainer"><a href="/">Q&A</a></div><br>
           {% if user and user.id %}
           <div class="menuContainer"><a href="" class="">follow</a></div><br>
           <div class="menuContainer"><a href="/profile">Profile</a></div>
