--- a/views/join.html
+++ b/views/join.html
@@ -39,7 +39,7 @@
 <script>
   window.onload = () => {
     if (new URL(location.href).searchParams.get('error')) {
-      alert('이미 존재하는 이메일입니다.');
+      alert('이미 존재하는 아이디입니다.');
     }
   };
 
