--- a/views/login.html
+++ b/views/login.html
@@ -6,8 +6,8 @@
     <h1>로그인</h1>
     <form id="login-form" action="/auth/login" method="post">
     <div class="input-group">
-        <label for="email">아이디</label>
-        <input id="email" type="email" name="email" required autofocus>
+        <label for="id">아이디</label>
+        <input id="id" type="id" name="id" required autofocus>
     </div>
     <div class="input-group">
         <label for="password">비밀번호</label>
