[UPDATE] 1. 게시물상세보기,게시물 화면 수정,라우터 추가 2. 회원가입화면 이메일 항목 입력창 제거 3.main.css 수정

--- a/public/join.css
+++ b/public/join.css
@@ -36,6 +36,12 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   .join-id{
       
   }
+input[type=password]{
+    font-family: 'Courier New', Courier, monospace;
+}
+::placeholder {
+    font-family: "NanumSquare";
+}
 .joinContainer{
     /* width:400px;
     height:400px; */
@@ -73,7 +79,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
     margin-top:5px;
     width:85%;
 }
-.btn{
+/* .btn{
     display: inline-block;
     padding: 0 5px;
     text-decoration: none;
@@ -88,7 +94,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
     font-size: 20px;
     border-radius:10px;
 
-}
+} */
 .joinTItleP{
 
 }
