--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
     </div>
     <button id="find_login" type="submit" class="btn">로그인</button>
     <br>
-    <a>아이디찾기</a> | <a>회원가입</a>
+    <a>아이디찾기</a> | <a href="/join">회원가입</a>
     </form>
     </div>
   </div>
