--- a/views/insert.html
+++ b/views/insert.html
@@ -4,7 +4,7 @@
     <div class="timeline">
       <h1>글쓰기</h1>
       <div class="twit">
-        <form id="post-form" action="/postInsert">
+        <form id="post-form" action="/post/insert">
           <div class="input-group">
             <label for="title">제목</label><br>
             <input id="title" type="type" name="title" placeholder="제목 입력"><br>
@@ -30,7 +30,7 @@
             <a>Q&A</a>&nbsp;<a>JAVA</a>&nbsp;<a>C++</a>&nbsp;<a>Nodejs</a>&nbsp;<a>DB</a>
           </div>
           <div class="input-group">
-              <button id="twit-btn" type="submit" class="btn">짹짹</button>
+              <button id="twit-btn" type="submit" class="btn">등록하기</button>
           
           </div>
         </form>
