--- a/views/insert.html
+++ b/views/insert.html
@@ -27,8 +27,18 @@
 
           <div class="input-group">
             <label>태그</label>
-            <a>Q&A</a>&nbsp;<a>JAVA</a>&nbsp;<a>C++</a>&nbsp;<a>Nodejs</a>&nbsp;<a>DB</a>
-          </div>
+            <ul>
+              <li>JAVA</li>
+              <li>C++</li>
+              <li>Nodejs</li>
+              <li>DB</li>
+              <li>보안</li>
+              <li>Javascript</li>
+              <li>OS</li>
+              <li>UI/UX</li>
+              <li>HTML/CSS</li>
+            </ul>
+            </div>
           <div class="input-group">
               <button id="twit-btn" type="submit" class="btn">등록하기</button>
           
